@@ -68,6 +68,7 @@ P = red
 S = blue
 
 [station_combinations]
+EXAMPLE = TA.T34A..BH?,TA.T35A..BH?,TA.TUL1..BH?,TA.U35A..BH?,TA.U36A..BH?,TA.V35A..BH?,TA.V36A..BH?,TA.V37A..BH?,TA.W35A..BH?,TA.W36A..BH?,TA.W37B..BH?,TA.X35A..BH?,TA.X36A..BH?
 EXAMPLE1 = II.PFO.00.LH?,GE.APE..LH?,GE.PSZ..LH?,CI.BBR..LH*,IV.PRMA..LH?,G.RER..LH*
 EXAMPLE2 = 7A.W01..LH?,CI.BBR..LH*
 # for complex, time-dependent station combinations use an exclamation mark
@@ -110,6 +111,7 @@ CI.BBR = server_fdsn_iris
 #   - network code
 GE = server_arclink_webdc
 7A = server_fdsn_iris
+TA = server_fdsn_iris
 
 [rotate_channels]
 # WARNING: rotated channels use the response of the first
